--- a/eureka-admin-view/src/main/resources/static/views/services.html
+++ b/eureka-admin-view/src/main/resources/static/views/services.html
@@ -3,7 +3,7 @@
 </div>
 <hr class="am-margin-0" />
 <form class="am-form am-form-horizontal am-margin-xs" role="form" method="post" action="" id="conditionForm">
-	<ul class="am-avg-sm-1 am-avg-md-2 am-avg-lg-4 am-thumbnails">
+	<ul class="am-avg-sm-1 am-avg-md-2 am-avg-lg-4 am-thumbnails" style="float: left;width: 70%;">
 		<li class="am-padding-0">
 			<div class="am-form-group am-form-group-sm">
 				<label for="name" class="am-u-sm-4 am-form-label">ServiceId</label>
@@ -37,7 +37,7 @@
 		</li>
 	</ul>
 	<div class="am-text-right">
-		<button type="button" class="am-btn am-btn-primary am-btn-xs am-margin-right-xs" id="filterBtn">Filter</button>
+		<button type="button" class="am-btn am-btn-primary am-btn-xs am-margin-right-xs" id="filterBtn">Search</button>
 		<button type="button" class="am-btn am-btn-primary am-btn-xs am-margin-right-xs" id="refreshBtn">Refresh</button>
 		<button type="reset" class="am-btn am-btn-default am-btn-xs">Reset</button>
 	</div>
